--- a/books.html
+++ b/books.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Library</title>
+  <title>Library | Books</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-  <script src="index.js"></script>
+  <script src="https://kit.fontawesome.com/ff4c1d9e56.js" crossorigin="anonymous"></script>
   <script src="books.js"></script>
+  <script src="./index.js"></script>
 </head>
 
 <body id="books__body">
@@ -18,29 +18,29 @@
       <div class="nav__container">
         <img class="logo" src="assets/Library.svg" alt="">
         <ul class="nav__links">
-          <li><a href="#" class="nav__link">Home</a></li>
+          <li><a href="/index.html" class="nav__link">Home</a></li>
           <li><a href="#" class="nav__link">Contact</a></li>
-          <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+          <li><a href="/books.html" class="nav__link nav__link--primary">Books</a></li>
         </ul>
         <button class="btn__menu" onclick="openMenu()">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="menu__backdrop" style="visibility: hidden;">
-          <button class="btn__menu btn__menu--close" onclick="closeMenu()">
-            <i class="fas fa-times"></i>
+            <i class="fa-solid fa-bars"></i>
           </button>
-          <ul class="menu__links">
-            <li class="menu__list">
-              <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
-            </li>
-            <li class="menu__list">
-              <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
-            </li>
-            <li class="menu__list">
-              <a class="menu__link no-cursor" onclick="closeMenu()">Contacts</a>
-            </li>
-          </ul>
-        </div>
+          <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+              <i class="fa-solid fa-times"></i>
+            </button>
+            <ul class="menu__links">
+              <li class="menu__list">
+                <a href="/index.html" class="menu__link" onclick="closeMenu()">Home</a>
+              </li>
+              <li class="menu__list">
+                <a href="/books.html" class="menu__link" onclick="closeMenu()">Books</a>
+              </li>
+              <li class="menu__list">
+                <a class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
+              </li>
+            </ul>
+          </div>
       </div>
     </nav>
   </section>
@@ -53,15 +53,15 @@
             <h2 class="section__title books__header--title">
               All <span class="purple">Books</span>
             </h2>
-            <select id="filter" onchange="filterBooks()">
+            <select id="filter" onchange="filterBooks(event)">
               <option value="" disabled selected>Sort</option>
               <option value="LOW_TO_HIGH">Price, Low to High</option>
               <option value="HIGH_TO_LOW">Price, High to Low</option>
               <option value="RATING">Rating</option>
             </select>
           </div>
-          <div class="books">
-            
+          <div class="books books__loading">
+            <i class="fas fa-spinner books__loading--spinner"></i>
           </div>
         </div>
       </div>
@@ -77,9 +77,9 @@
           </figure>
         </a>
         <div class="footer__list footer__link--wrap">
-          <a href="#" class="footer__link">Home</a>
-          <a class="footer__link no-cursor">About</a>
-          <a href="#features" class="footer__link">Books</a>
+          <a href="/index.html" class="footer__link">Home</a>
+          <a href="/index.html#highlights" class="footer__link">About</a>
+          <a href="#" class="footer__link">Books</a>
           <a class="footer__link no-cursor">Contact</a>
         </div>
         <div class="footer__copyright">Copyright &copy; 2021 Library</div>
