--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="nav__link--wrap">
             <li><a href="#landing" class="nav__link">Home</a></li>
             <li><a href="#" class="nav__link">Contact</a></li>
-            <li><a href="#recent" class="nav__link nav__link--primary">Books</a></li>
+            <li><a href="/books.html" class="nav__link nav__link--primary">Books</a></li>
           </ul>
           <button class="btn__menu" onclick="openMenu()">
             <i class="fa-solid fa-bars"></i>
@@ -30,10 +30,10 @@
             </button>
             <ul class="menu__links">
               <li class="menu__list">
-                <a href="#landing" class="menu__link" onclick="closeMenu()">Home</a>
+                <a href="/index.html" class="menu__link" onclick="closeMenu()">Home</a>
               </li>
               <li class="menu__list">
-                <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+                <a href="/books.html" class="menu__link" onclick="closeMenu()">Books</a>
               </li>
               <li class="menu__list">
                 <a class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
@@ -49,7 +49,7 @@
             <h2>
               Find your dream book with <span class="purple">Library</span>
             </h2>
-            <a href="#features">
+            <a href="/books.html">
               <button class="btn">Browse Books</button>
             </a>
           </div>
@@ -312,7 +312,7 @@
         <div class="container">
           <div class="explore__cont row">
             <h2 class="section__title">Explore more <span class="purple">Books</span></h2>
-            <a href="#features">
+            <a href="/books.html">
               <button class="btn">Browse Books</button>
             </a>
           </div>
@@ -331,7 +331,7 @@
           <ul class="footer__link--wrap">
             <li><a href="#landing"class="footer__link">Home</a></li>
             <li><a href="#highlights"class="footer__link">About</a></li>
-            <li><a href="#recent"class="footer__link">Books</a></li>
+            <li><a href="/books.html"class="footer__link">Books</a></li>
             <li><a href="#"class="footer__link no-cursor">Contact</a></li>
           </ul>
           <div class="footer__copyright">Copyright &copy; 2025 Library</div>
